--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "onnx==1.18.0",
     "onnx-ir==0.1.2",
     "onnxruntime==1.22.0",
+    "onnxruntime-extensions==0.14.0",
     "onnxscript==0.3.0",
     "netron==8.3.8",
     "click==8.2.1",
