--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,8 +22,9 @@ requires-python = ">=3.10"
 dependencies = [
     "onnx==1.18.0",
     "onnx-ir==0.1.2",
-    "onnxruntime==1.22.0",
+    "onnxruntime-gpu[cuda,cudnn]==1.22.0",
     "onnxruntime-extensions==0.14.0",
+    "transformers==4.52.4",  # Somehow required by onnxruntime-extensions...
     "onnxscript==0.3.0",
     "netron==8.3.8",
     "click==8.2.1",
