Fix project description line break in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,8 +2,7 @@
 # dependencies, ...
 [project]
 name = "onnx-passes"
-description = """Collection of ONNX model graph transformation and analysis
- passes based on ONNX IR and ONNX Script"""
+description = "Collection of ONNX model graph transformation and analysis passes based on ONNX IR and ONNX Script"
 readme = "README.md"
 license = "MIT"
 license-files = ["LICENSE"]
