--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ requires-python = ">=3.10"
 # List of project dependencies with pinned versions followig the format of
 # requirements.txt
 dependencies = [
-    "onnx==1.18.0",
+    "onnx==1.17.0",
     "onnx-ir==0.1.6",
     "onnxruntime-gpu[cuda,cudnn]==1.22.0",
     "onnxruntime-extensions==0.14.0",
@@ -29,7 +29,7 @@ dependencies = [
     "netron==8.4.0",
     "click==8.2.1",
     "PyYAML==6.0.2",
-    "numpy==2.2.6"
+    "numpy<=1.26.4"
 ]
 # Reference to the project websites (GitHub repository)
 
