--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,12 +23,13 @@ dependencies = [
     "onnx==1.17.0",
     "onnx-ir==0.1.8",
     "onnxruntime-gpu[cuda,cudnn]==1.22.0",
-    "onnxscript==0.3.2",
+    "onnxscript @ git+https://github.com/microsoft/onnxscript.git@9036fab",
     "netron~=8.5.4",
     "click==8.2.1",
     "PyYAML==6.0.2",
     "numpy<=1.26.4"
 ]
+
 # Reference to the project websites (GitHub repository)
 
 [project.urls]
