--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,8 +24,8 @@ dependencies = [
     "onnx-ir==0.1.9",
     "onnxruntime-gpu[cuda,cudnn]==1.22.0",
     "onnxscript @ git+https://github.com/microsoft/onnxscript.git@9036fab",
-    "netron~=8.5.4",
-    "click==8.2.1",
+    "netron>=8.5.4",
+    "click>=8.2.1",
     "PyYAML==6.0.2",
     "numpy>=1.26.4"
 ]
