--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ dependencies = [
     "onnx>=1.17.0",
     "onnx-ir==0.1.9",
     "onnxruntime-gpu[cuda,cudnn]==1.22.0",
-    "onnxscript @ git+https://github.com/microsoft/onnxscript.git@9036fab",
+    "onnxscript==0.5.2",
     "netron>=8.5.4",
     "click>=8.2.1",
     "PyYAML==6.0.2",
