--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ requires-python = ">=3.10"
 dependencies = [
     "onnx>=1.17.0",
     "onnx-ir==0.1.10",
-    "onnxruntime-gpu[cuda,cudnn]==1.22.0",
+    "onnxruntime<=1.22.0",
     "onnxscript==0.5.3",
     "netron>=8.0.0",
     "click>=8.2.1",
