--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ requires-python = ">=3.10"
 # requirements.txt
 dependencies = [
     "onnx>=1.17.0",
-    "onnx-ir==0.1.10",
+    "onnx-ir (>=0.1.10,<=0.1.12)",
     "onnxruntime<=1.22.0",
     "onnxscript==0.5.3",
     "netron>=8.0.0",
