--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ dependencies = [
     "onnx>=1.17.0",
     "onnx-ir (>=0.1.10,<=0.1.12)",
     "onnxruntime<=1.22.0",
-    "onnxscript==0.5.3",
+    "onnxscript (>=0.5.3,<=0.5.4)",
     "netron>=8.0.0",
     "click>=8.2.1",
     "PyYAML>=6.0.0",
